src/routes/Board/styles.less
.board-container, .menu-container {
    font-size: 14px;

    .board-row {
        &.continue-watching-row {
            .meta-item {
                --play-icon-visibility: visible;

                &:nth-child(n+7) {
                    display: none;
                }
            }
        }

        &.notificatins-row {
            .meta-item {
                &:hover, &:focus {
                    --play-icon-visibility: visible;
                }

                &:nth-child(n+5) {
                    display: none;
                }
            }
        }

        &.addon-catalog-row {
            .meta-item {
                &:nth-child(n+8) {
                    display: none;
                }
            }
        }
    }
}

.board-container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    background-color: var(--color-background);

    .nav-bar {
        flex: none;
        align-self: stretch;
    }

    .board-content {
        flex: 1;
        align-self: stretch;
        overflow-x: hidden;
        overflow-y: auto;

        .board-row {
            width: 100%;
            padding: 0 1em;
            display: flex;
            flex-direction: row;
            align-items: stretch;

            &:first-child {
                padding-top: 1em;
            }

            &:last-child {
                padding-bottom: 1em;
            }

            .meta-items-container {
                flex: 5;
                display: flex;
                flex-direction: row;
                align-items: stretch;

                .meta-item {
                    margin: 1em;

                    &.poster-shape-square {
                        flex: 1;
                    }

                    &.poster-shape-landscape {
                        flex: calc(1 / var(--landscape-shape-ratio));
                    }

                    &.poster-shape-poster {
                        flex: calc(1 / var(--poster-shape-ratio));
                    }
                }
            }

            .show-more-container {
                margin: 1em;
                flex: 1;
                background-color: var(--color-backgroundlighter);
                cursor: pointer;
            }
        }
    }
}

